--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.7MinuteWorkout">
+        <activity android:name=".HistoryActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/NoActionBarTheme">
+        </activity>
+
         <activity
             android:name=".bmi_activity"
             android:screenOrientation="portrait"
             android:theme="@style/NoActionBarTheme">
-
         </activity>
 
         <activity
             android:name=".FinishActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
         </activity>
+
         <activity
             android:name=".ExerciseActivity"
             android:screenOrientation="portrait"
