SignUp UI & SignIn UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.7MinuteWorkout">
-        <activity android:name=".SplashScreen"
+        <activity android:name=".activities.SignIn"></activity>
+        <activity android:name=".activities.SignUp" />
+        <activity android:name=".activities.IntroActivity" />
+        <activity
+            android:name=".activities.SplashScreen"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,26 +23,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".bmi_activity"
+            android:name=".activities.bmi_activity"
             android:screenOrientation="portrait"
-            android:theme="@style/NoActionBarTheme">
-
-        </activity>
+            android:theme="@style/NoActionBarTheme" />
         <activity
-            android:name=".FinishActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
-        </activity>
-        <activity
-            android:name=".ExerciseActivity"
+            android:name=".activities.FinishActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
-        </activity>
+            android:name=".activities.ExerciseActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".activities.MainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
     </application>
 
 </manifest>
