--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    mplementation "com.google.firebase:firebase-auth:21.0.1"
-    implementation "com.google.firebase:firebase-firestore:23.0.1"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation "com.google.firebase:firebase-firestore:23.0.1"
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-core:19.0.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+
+    implementation 'com.scwang.wave:MultiWaveHeader:1.0.0'
+
 }
