--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.7MinuteWorkout">
-        <activity android:name=".activities.SignIn"></activity>
+        <activity android:name=".activities.BaseActivity"></activity>
+        <activity android:name=".activities.SignIn" />
         <activity android:name=".activities.SignUp" />
         <activity android:name=".activities.IntroActivity" />
         <activity
