--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.7MinuteWorkout">
-        <activity android:name=".activities.BaseActivity"></activity>
+        <activity android:name=".activities.BaseActivity">
+
+        </activity>
         <activity android:name=".activities.SignIn" />
         <activity android:name=".activities.SignUp" />
         <activity android:name=".activities.IntroActivity" />
@@ -24,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.bmi_activity"
+            android:name=".activities.BmiActivity"
             android:screenOrientation="portrait"
             android:theme="@style/NoActionBarTheme" />
         <activity
