--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,17 +4,20 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/application_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/application_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.7MinuteWorkout">
-        <activity android:name=".activities.BaseActivity">
+        <activity
+            android:name=".activities.SignInActivity" />
 
-        </activity>
-        <activity android:name=".activities.SignIn" />
+        <activity android:name=".activities.BaseActivity"/>
         <activity android:name=".activities.SignUp" />
-        <activity android:name=".activities.IntroActivity" />
+        <activity
+            android:name=".activities.IntroActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".activities.SplashScreen"
             android:screenOrientation="portrait"
@@ -39,7 +42,7 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".activities.MainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/Theme.7MinuteWorkout" />
     </application>
 
 </manifest>
